--- a/src/components/DataTable/DataTable.css
+++ b/src/components/DataTable/DataTable.css
@@ -9,9 +9,10 @@
     max-height: 70vh;
 }
 
-table{
-    width: 100%;
-    height: 60vh;
+
+
+tr td{
+    height: 4rem;
 }
 
 thead,th{
@@ -43,8 +44,6 @@ th input{
     height: 20px;
 }
 
-
-
 td input{
     width: 20px;
     height: 20px;
@@ -64,10 +63,14 @@ tbody tr:hover td{
 }
 
 .checked{
+    background-color: #f1f1f1 !important;
+}
+
+tr.checked_row{
     background-color: #f1f1f1;
 }
 
-.active_user{
+.user_active{
     color:#008000;
     font-weight: 500;
 }
@@ -78,9 +81,10 @@ tbody tr:hover td{
 
 .delete_button{
     background-color: #D0312D;
-    color: white;
+    color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 
