--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -35,6 +35,7 @@ input{
     background-color: transparent;
     width: 300px;
     transition: 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .search:hover, .search:focus-within {
